# weekend-ray-tracer

./: .gitignore  .travis.yml  Cargo.toml  build.rs
docs/: README.md  sphere_lo_aa.ppm  sphere_lo_no_aa.ppm
src/: camera.rs  cli.yaml  common.rs  hittable.rs  lib.rs  main.rs  ray.rs  sample.rs  scene.rs  typedefs.rs
src/camera/: mod.rs  pinhole.rs
src/material/: diffuse.rs  mirror.rs  mod.rs
src/primitives/: sphere.rs
