[package]
name = "trt"
version = "0.5.1"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
build = "build.rs"

[lib]
name = "trtlib"
path = "src/lib.rs"
doc = true

[[bin]]
name = "trt"
path = "src/main.rs"
doc = false

[dependencies]
image = "0.21"
indicatif = "0.11.0"
rand = "0.6.5"
num = "0.2.0"
rayon = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
clap = {version = "2.32.0", features = ["yaml", "suggestions", "color"]}
serde_yaml = "0.8.8"
erased-serde = "0.3.9"

[build-dependencies]
clap = {version = "2.32.0", features = ["yaml", "suggestions", "color"]}

[dependencies.nalgebra-lapack]
version = "0.9.0"
default-features = false
#features = ["netlib"] # substitute whichever provider you would like for your system

[dependencies.nalgebra]
version = "0.17.2"
features = ["serde-serialize"]

[profile.release]
lto = true
opt-level = 3
debug = false
panic = "abort"
codegen-units = 1
